# kaufbot

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CODE_SMELLS.md  Dockerfile  LICENSE  NEXT_STEPS.md  README.md  REFACTORING_PLAN.md  RULES.md  build.sh  ci.sh  deploy.sh  docker-compose.yml  fetch_deps.sh  run.sh  test.sh
.github/workflows/: ci.yml
data/: bot.db  bot.db-shm  bot.db-wal
data/files/: upload_2026-03-22_19_36_24_ocr_result.txt  upload_2026-03-23_11_24_20_ocr_result.txt  upload_2026-03-23_12_49_17_ocr_result.txt
docs/: backends.md  components.md  deployment.md  http_refactoring_plan.md  infrastructure_coupling_analysis.md  modules.md
migrations/: postgres_schema.sql  prompts_table.sql
src/: bot.c  bot.h  config.c  config.h  db.c  db.h  db_backend.h  db_postgres.c  db_sqlite.c  document_store.c  event_bus.c  event_bus.h  file_repository.h  file_repository_memory.c  gemini.c  gemini.h  http_client.h  main.c  ocr_service.h  processor.c  processor.h  prompt_fetcher.c  prompt_fetcher.h  storage.c  storage.h  storage_backend.h  storage_local.c  storage_supabase.c  utils.c  utils.h
src/db/: db.h  db_backend.h  db_postgres.c  db_sqlite.c
src/infra/: document_store.h  file_repository.c  http_client.c  http_client.h
src/ocr/: gemini.c  gemini.h  ocr_service.c  ocr_service.h
src/storage/: storage.h  storage_backend.h  storage_local.c  storage_supabase.c
src/telegram/: bot.c  bot.h  bot_commands.c  bot_commands.h  bot_telegram.c  bot_telegram.h  reply_builder.c  reply_builder.h
tests/: main.c  test_bot.c  test_config.c  test_db.c  test_document_store.c  test_edge_cases.c  test_event_bus.c  test_file_repository.c  test_helpers.h  test_http_client.c  test_json.c  test_processor.c  test_prompts.c  test_runner.h  test_storage.c  test_utils.c
tools/: install.sh
